# starlarky

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  .semgrepignore  .trufflehogignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.python  LICENSE  MANIFEST.in  Makefile  README.md  build-and-test-java.sh  build-and-test-python.sh  build.py  compass.yml  compose.yaml  docker-compose.yaml  fizzbuzz.star  install_graalvm.sh  pom.xml  pyproject.toml  setup.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/workflows/: build-test-publish.yaml  maven.yml  release-please.yaml  security-scan-sast.yaml  snyk.wip
docs/: setup.py
docs/source/: api.rst  conf.py  index.rst
docs_poc/: Makefile
docs_poc/examples/: example_itertools.star  foobar.py  foobaz.star
docs_poc/larky_autodoc/: __init__.py  directive.py  importer.py  larkyhack.py
docs_poc/source/: _io.rst  base64.rst  binascii.rst  builtins.rst  collections.rst  compat.rst  conf.py  csv.rst  dicts.rst  (+21 more)
example/: modify.star  test.in
examples/: test_aws_v4_sign.star  test_base64_AES.star  test_fd_hmac_sha256_signature.star
larky/: pom.xml
larky-api/: README.md  pom.xml
larky-playground/: Dockerfile  docker-compose.yaml  requirements.txt  server.py
larky_server/: .gitignore  Dockerfile  Readme.md  build_docker.sh  client.py  gen_code.py  requirements.txt  server.py  utils.py
libstarlark/: README.md  pom.xml
pylarky/: README.md  larky.py  request.py  starlarky.py
runlarky/: pom.xml
scripts/: get_resources.sh
(+1469 files in other folders)
