[tool.poetry]
name = "pylarky"
version = "0.0.0"
description = "Python wrapper for starlarky runner"
authors = ["Very Good Security"]
license = "Apache License v2.0"
packages = [{ include = "pylarky" }]
exclude = ["pylarky/tests"]
include = [{ path = "pylarky/larky-runner" }]
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.43.0"
protobuf = "^3.19.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
