[tool.poetry]
name = "pylarky"
version = "0.0.1"
description = "Python wrapper for starlarky runner"
authors = ["Very Good Security"]
license = "Apache License v2.0"
packages = [{ include = "pylarky" }]
exclude = ["pylarky/tests"]
include = [{ path = "pylarky/larky-runner" }]
build = 'build.py'
readme = "pylarky/README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
setuptools = "74.1.3"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
